# furrk-cms-server

./: .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile
migrations/: 20250925051852_init.sql  20250925051917_queue.sql  20250926020543_tags.sql
src/: app_state.rs  config.rs  error.rs  handlers.rs  jwt.rs  lib.rs  main.rs  requirements.md  routes.rs
src/handlers/: login.rs  media_handler.rs  platform_handler.rs
src/models/: media_item.rs  mod.rs  platform.rs  tag.rs
src/routes/: platform_router.rs  post_router.rs
