[package]
name = "yiffy-corner-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.42"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
url = "2.5.7"
