[package]
name = "yiffy-corner-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.42"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
